[metadata]
name = uniqed
version =  0.0.0
license = MIT
description = Simple implementation of the Temporal Outlier Factor
long_description = file: README.rst
author = Zsigmond Benko, Tamas Babel, Zoltan Somogyvari
author_email = benko.zsigmond@gmail.com
classifiers=
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Medical Science Apps.
   Topic :: Scientific/Engineering :: Physics
   Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   scipy
   scikit-learn
   pandas
   matplotlib

[options.packages.find]
where=src
